--- a/client/main.html
+++ b/client/main.html
@@ -14,12 +14,12 @@
   <div id="componets-counter">Your collection counts {{componentsCount}} components</div>
 
   <div class="table-header">
-    <div class="table-col col-1">Category</div>
-    <div class="table-col col-2">Type/Manufacturer</div>
-    <div class="table-col col-3">Code / value</div>
-    <div class="table-col col-4">Description</div>
-    <div class="table-col col-5">Qty</div>
-    <div class="table-col col-6">Last Price</div>
+    <div class="table-col col-cat">Category</div>
+    <div class="table-col col-type">Type/Manufacturer</div>
+    <div class="table-col col-code">Code / value</div>
+    <div class="table-col col-desc">Description</div>
+    <div class="table-col col-qty">Qty</div>
+    <div class="table-col col-price">Last Price</div>
   </div>
 
 
@@ -30,17 +30,27 @@
 
 
 <template name="componentsRow">
-  <div class="table-row">
-    <div class="table-col col-1">{{category}}</div>
-    <div class="table-col col-2">{{type}}</div>
-    <div class="table-col col-3">{{code}}</div>
-    <div class="table-col col-4">{{description}}</div>
-    <div class="table-col col-5">{{quantity}}</div>
-    <div class="table-col col-6">{{lastprice}}</div>
+  <div class="table-row"  id="{{_id}}" data-id="{{_id}}">
+    <div class="table-col col-cat">{{category}}</div>
+    <div class="table-col col-type">{{type}}</div>
+    <div class="table-col col-code">{{code}}</div>
+    <div class="table-col col-desc">{{description}}</div>
+    <div class="table-col col-qty">{{quantity}}</div>
+    <div class="table-col col-price">{{lastprice}}</div>
   </div>
+  {{#if isDetailVisible }}
+    {{> componentDetail}}
+  {{/if}}
 </template>
 
 
-<template name="componentsDetail">
+<template name="componentDetail">
+  <div class="component-detail"  id="{{_id}}" data-id="{{_id}}">
+    <div class="table-col col-type">{{type}}</div>
+    <div class="table-col col-code">{{code}}</div>
+    <div class="table-col col-desc">{{description}}</div>
+    <label>Quantity</label> <input type="text" name="quantity" value="{{quantity}}">
+    <div class="table-col col-price">{{lastprice}}</div>
+  </div>
 
 </template>
