fix component detail activation

--- a/client/main.html
+++ b/client/main.html
@@ -30,7 +30,7 @@
 
 
 <template name="componentsRow">
-  <div class="table-row"  id="{{_id}}" data-id="{{_id}}">
+  <div class="table-row"  id="{{_id._str}}" data-id="{{_id._str}}">
     <div class="table-col col-cat">{{category}}</div>
     <div class="table-col col-type">{{type}}</div>
     <div class="table-col col-code">{{code}}</div>
